Use perfcake home instead of perfcake shade jar